wip: flatten discussion endpoints, course thumbnail
